[gd_scene load_steps=5 format=3 uid="uid://btv7iali1cik1"]

[ext_resource type="Texture2D" uid="uid://t4mr7wdg4duq" path="res://Assets/portraits_sheet1.png" id="1_cxih6"]
[ext_resource type="Script" path="res://Scripts/mission_select.gd" id="1_oayvm"]
[ext_resource type="FontFile" uid="uid://dqqb4aa66ub7s" path="res://Assets/m5x7.ttf" id="2_5trhw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lcoih"]

[node name="MissionSelect" type="Node2D"]
script = ExtResource("1_oayvm")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1198.0
offset_bottom = 720.0
color = Color(0.152941, 0.113725, 0.172549, 1)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(191, 417.094)
scale = Vector2(7.43, 7.26111)
texture = ExtResource("1_cxih6")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 443.0
offset_top = 11.0
offset_right = 1127.0
offset_bottom = 154.0
theme_override_colors/default_color = Color(1, 0.972549, 0.929412, 1)
theme_override_fonts/normal_font = ExtResource("2_5trhw")
theme_override_font_sizes/normal_font_size = 128
text = "MISSION SELECT"

[node name="congrats" type="RichTextLabel" parent="."]
offset_left = 437.0
offset_top = 459.0
offset_right = 1129.0
offset_bottom = 602.0
theme_override_colors/default_color = Color(1, 0.972549, 0.929412, 1)
theme_override_fonts/normal_font = ExtResource("2_5trhw")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]CONGRATULATIONS! YOU ARE A TRUE SPY HUNTER[/center]"

[node name="Button" type="Button" parent="."]
process_mode = 3
offset_left = 475.0
offset_top = 204.0
offset_right = 1055.0
offset_bottom = 277.0
focus_mode = 0
theme_type_variation = &"FlatButton"
theme_override_colors/font_disabled_color = Color(0.482353, 0.411765, 0.376471, 1)
theme_override_colors/font_hover_color = Color(0.878431, 0.121569, 0.247059, 1)
theme_override_colors/font_color = Color(1, 0.972549, 0.929412, 1)
theme_override_fonts/font = ExtResource("2_5trhw")
theme_override_font_sizes/font_size = 64
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lcoih")
text = "Mission 1: 10 People, 1 Spy"

[node name="Button2" type="Button" parent="."]
process_mode = 3
offset_left = 474.0
offset_top = 285.0
offset_right = 1074.0
offset_bottom = 358.0
focus_mode = 0
theme_type_variation = &"FlatButton"
theme_override_colors/font_disabled_color = Color(0.482353, 0.411765, 0.376471, 1)
theme_override_colors/font_hover_color = Color(0.878431, 0.121569, 0.247059, 1)
theme_override_colors/font_color = Color(1, 0.972549, 0.929412, 1)
theme_override_fonts/font = ExtResource("2_5trhw")
theme_override_font_sizes/font_size = 64
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lcoih")
text = "Mission 2: 30 People, 2 Spies"

[node name="Button3" type="Button" parent="."]
process_mode = 3
offset_left = 475.0
offset_top = 376.0
offset_right = 1111.0
offset_bottom = 435.0
focus_mode = 0
theme_type_variation = &"FlatButton"
theme_override_colors/font_disabled_color = Color(0.482353, 0.411765, 0.376471, 1)
theme_override_colors/font_hover_color = Color(0.878431, 0.121569, 0.247059, 1)
theme_override_colors/font_color = Color(1, 0.972549, 0.929412, 1)
theme_override_fonts/font = ExtResource("2_5trhw")
theme_override_font_sizes/font_size = 64
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lcoih")
text = "Mission 3: 50 People, 4 Spies "

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
